# ChangeLog for sys-apps/paludis
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/paludis/ChangeLog,v 1.98 2008/05/29 14:11:10 zlin Exp $

*paludis-0.26.2 (29 May 2008)

  29 May 2008; Bo Ørsted Andresen <zlin@gentoo.org> +paludis-0.26.2.ebuild:
  Version bump.

*paludis-0.26.1 (30 Apr 2008)

  30 Apr 2008; Bo Ørsted Andresen <zlin@gentoo.org> -paludis-0.24.6.ebuild,
  -paludis-0.26.0_pre3.ebuild, -paludis-0.26.0_pre4.ebuild,
  +paludis-0.26.1.ebuild:
  Version bump.

  28 Apr 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
  Remove Stephen Bennett (spb) from metadata.xml (as per #64840).

*paludis-0.26.0 (25 Apr 2008)

  25 Apr 2008; Richard Brown <rbrown@gentoo.org> +paludis-0.26.0.ebuild:
  Version bump.

  23 Apr 2008; Bo Ørsted Andresen <zlin@gentoo.org>
  paludis-0.26.0_pre3.ebuild, paludis-0.26.0_pre4.ebuild:
  USE=cran is currently dead. Bug #219046.

*paludis-0.26.0_pre4 (22 Apr 2008)

  22 Apr 2008; Richard Brown <rbrown@gentoo.org>
  -paludis-0.26.0_pre1.ebuild, -paludis-0.26.0_pre2.ebuild,
  +paludis-0.26.0_pre4.ebuild:
  Version bump

*paludis-0.26.0_pre3 (22 Apr 2008)

  22 Apr 2008; Richard Brown <rbrown@gentoo.org>
  +paludis-0.26.0_pre3.ebuild:
  Version bump.

*paludis-0.26.0_pre2 (16 Apr 2008)

  16 Apr 2008; Bo Ørsted Andresen <zlin@gentoo.org>
  -files/paludis-0.26.0_alpha14-broken-profiles.patch,
  -paludis-0.26.0_alpha13.ebuild, -paludis-0.26.0_alpha14-r1.ebuild,
  +paludis-0.26.0_pre2.ebuild:
  Version bump.

*paludis-0.26.0_pre1 (13 Apr 2008)

  13 Apr 2008; Bo Ørsted Andresen <zlin@gentoo.org>
  -files/paludis-0.26.0_alpha9-echo-functions.patch,
  -paludis-0.26.0_alpha9-r1.ebuild, -paludis-0.26.0_alpha11.ebuild,
  -paludis-0.26.0_alpha12.ebuild, -paludis-0.26.0_alpha14.ebuild,
  +paludis-0.26.0_pre1.ebuild:
  Version bump.

*paludis-0.26.0_alpha14-r1 (03 Apr 2008)

  03 Apr 2008; Stephen Bennett <spb@gentoo.org>
  +files/paludis-0.26.0_alpha14-broken-profiles.patch,