@@ -1,8 +1,16 @@
-DIST paludis-0.26.0.tar.bz2 1500639 RMD160 ce78f59a9c986d4ee09fe52f5ec76c9de2509142 SHA1 91b079d3b8c5ea7c9d9107253be6f2772500154e SHA256 732980f8f4dd08e2266a565519deb0458b86f12323bb9635dcf97d576801e7e9
-DIST paludis-0.26.1.tar.bz2 1500671 RMD160 30c0217b77e06aeab86f900802e0a423a8b64cf7 SHA1 ea36c83644d1464dffe320cc9e72ba06e574c313 SHA256 b59f2d37cef562ebe2e7cfcf4f9a317eaa6ca5b207db90fbafcd0d06f8da7943
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST paludis-0.26.2.tar.bz2 1508795 RMD160 cccaaeb7db04a72b5293dfb40bfd7409d291080d SHA1 a1a5bd0dbdc4a16b5578f3d347f82ce1ec6b308d SHA256 6c96397b611236c5f3f453ac2bc0c1136bc20e5fd85f0c48c555bf4eb732b64a
-EBUILD paludis-0.26.0.ebuild 4534 RMD160 772f0e6fab89ac66a91fc2c957192afcb94bf4cd SHA1 ef0ccce7bd3cfd78669b83e20f0441770c8074ce SHA256 3fbcadff69df6045941036f042204717e62731a489892c383fe736779af09f2d
-EBUILD paludis-0.26.1.ebuild 4532 RMD160 49a265981e55f77aa01e391b0e62ed51ac03a942 SHA1 b323e6ac4faa2a2fb6b52492160ab7e30f975ac5 SHA256 afed29fbeed0b1b2eb6e732cab915c798643934dcfe6f5f48f14e676688427c0
+DIST paludis-0.28.0.tar.bz2 1460553 RMD160 ee0d8bc701582fe4ac5a8c5f459ba71616fe3439 SHA1 29d6e67b18fcc6fb85a8c1fa2d187a93163a7493 SHA256 55df01668947e3fff32cf4ecb3ae8b46a03273dc112310482da4682b49af38cc
 EBUILD paludis-0.26.2.ebuild 4532 RMD160 f55ca2c5d65dc36065923f491e0e1141cb29cf1b SHA1 fe44621f9705f88bb544f9ba338535fb00513df3 SHA256 c4c3fbed6378e91d21893990925e661019bcf3b4cdac603f2b2983d7bebd2693
-MISC ChangeLog 15551 RMD160 de4e4a7352d620aa5961cb1fcb202711b04c3aff SHA1 6a26f3d52e476afac234fb1cfc6525e950ef888e SHA256 983116b09cc725ee67353d343d6e8b6ffeb09d8b6477d16d7514d16711ccf7ed
+EBUILD paludis-0.28.0.ebuild 4539 RMD160 b0ee82596877260f404140ed11202fe390c208da SHA1 8af59286aa196ee897b06f07ce6a6099e569124f SHA256 30b3d3f0814b1ab0e8f5f04479a3f8732b011a37b03b1598745374fc1b12654c
+MISC ChangeLog 15755 RMD160 6d59587135ab2235347b217da3f073d0bc9529b7 SHA1 e4608234525589c575cbb70d13d29208c7c7eaba SHA256 1c08d5d6262d544482fb12ffb746e74fd69b20d0c8aa8ccf03b691410475067b
 MISC metadata.xml 355 RMD160 10a56f9962e41979bc21751448c6f8c11f191fce SHA1 83867bbcb24750bbe67de204797015bfe9abac3f SHA256 ea555ffa7b334a1400034f8e761eb4ea9f82983b50f1ee8c1cc55c3afa57429a
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkhyT4EACgkQF6yMcaBxwHlUFwCfTU0mhOHfNh63MMXzXUS63iNo
+EWMAniXHwj8Raih6eEiivN4RMSWg6tMq
+=IpJP
+-----END PGP SIGNATURE-----
