@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/paludis
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/paludis/ChangeLog,v 1.98 2008/05/29 14:11:10 zlin Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/paludis/ChangeLog,v 1.99 2008/07/07 17:01:53 gentoofan23 Exp $
+
+*paludis-0.28.0 (07 Jul 2008)
+
+  07 Jul 2008; Thomas Anderson <gentoofan23@gentoo.org>
+  -paludis-0.26.0.ebuild, -paludis-0.26.1.ebuild, +paludis-0.28.0.ebuild:
+  Version bump, clean old versions
 
 *paludis-0.26.2 (29 May 2008)
 
